# src/main/java/com/capstone/backend/auth/dto/LoginResponse.java
@@ -1,0 +1,9 @@
+package com.capstone.backend.auth.dto;
+
+public record LoginResponse(
+        String accessToken,
+        String refreshToken,
+        String tokenType,
+        UserProfileResponse user
+) {
+}
